syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.olow.grpccms.grpccms.grpc";
option java_outer_classname = "AnalyticServiceProto";
//option go_package = "login-service-go/authservice";
// option for python


package analyticservice;

// The greeting service definition.
service AnalyticService {
  // Show number of posts in the database
  rpc GetPostCount (GetPostCountRequest) returns (GetPostCountResponse) {}
  // show number of views per post
  rpc GetPostViews (GetPostViewsRequest) returns (GetPostViewsResponse) {}
}

// The request message containing the user's name.
message GetPostCountRequest {

}

// The response message containing the greetings
message GetPostCountResponse {
  int32 count = 1;
}

message GetPostViewsRequest {
  int32 post_id = 1;
}

message GetPostViewsResponse {
  int32 views = 1;
}